# log-anomaly-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/log_analyzer/: __init__.py  __main__.py  cli.py  detectors.py  evaluation.py  generator.py  models.py  parser.py  pipeline.py
tests/: test_detectors.py  test_evaluation.py  test_generator.py  test_parser.py  test_pipeline.py
